# finn_no_car_search

./: .gitignore  pyproject.toml
data/: ads.parquet
notebooks/: identify_paterns.ipynb
src/: app.py  config.toml  scraper.py
