[tool.poetry]
name = "finn-no-car-search"
version = "0.1.0"
description = ""
authors = ["Marcus Hülsdau <marcus@aiba.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
ipykernel = "^6.29.4"
plotly = "^5.22.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
